// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings matches snapshot when OBS socket is disabled 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"ipl-sidebar__wrapper sidebar-transition-enter-from sidebar-transition-leave-from sidebar-transition-leave-active\\" data-v-2b6fb510=\\"\\">
  <div class=\\"background\\" data-v-2b6fb510=\\"\\"></div>
  <div class=\\"content\\" data-v-2b6fb510=\\"\\">
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_lastfm\\" data-v-11cc5f1c=\\"\\">Last.fm</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_radia\\" data-v-11cc5f1c=\\"\\">Radia</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_gameVersion\\" data-v-11cc5f1c=\\"\\">Game version</div>
    <div class=\\"ipl-space color-blue clickable m-b-8\\" data-test=\\"section-selector_obs-socket\\" data-v-11cc5f1c=\\"\\">OBS Socket</div>
  </div>
</div>
<!---->
<div class=\\"ipl-space color-dark clickable layout horizontal m-t-8\\" data-test=\\"open-sidebar-button\\" data-v-11cc5f1c=\\"\\">
  <font-awesome-icon-stub icon=\\"bars\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"large-icon m-r-8\\"></font-awesome-icon-stub> All Settings
</div>
<obs-socket-settings-stub class=\\"m-t-8\\"></obs-socket-settings-stub>
<!--v-if-->"
`;

exports[`Settings matches snapshot when section gameVersion is selected 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"ipl-sidebar__wrapper sidebar-transition-enter-from sidebar-transition-leave-from sidebar-transition-leave-active\\" data-v-2b6fb510=\\"\\">
  <div class=\\"background\\" data-v-2b6fb510=\\"\\"></div>
  <div class=\\"content\\" data-v-2b6fb510=\\"\\">
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_lastfm\\" data-v-11cc5f1c=\\"\\">Last.fm</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_radia\\" data-v-11cc5f1c=\\"\\">Radia</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_gameVersion\\" data-v-11cc5f1c=\\"\\">Game version</div>
    <div class=\\"ipl-space color-blue clickable m-b-8\\" data-test=\\"section-selector_obs-socket\\" data-v-11cc5f1c=\\"\\">OBS Socket</div>
  </div>
</div>
<!---->
<div class=\\"ipl-space color-dark clickable layout horizontal m-t-8\\" data-test=\\"open-sidebar-button\\" data-v-11cc5f1c=\\"\\">
  <font-awesome-icon-stub icon=\\"bars\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"large-icon m-r-8\\"></font-awesome-icon-stub> All Settings
</div>
<runtime-config-stub class=\\"m-t-8\\"></runtime-config-stub>"
`;

exports[`Settings matches snapshot when section lastfm is selected 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"ipl-sidebar__wrapper sidebar-transition-enter-from sidebar-transition-leave-from sidebar-transition-leave-active\\" data-v-2b6fb510=\\"\\">
  <div class=\\"background\\" data-v-2b6fb510=\\"\\"></div>
  <div class=\\"content\\" data-v-2b6fb510=\\"\\">
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_lastfm\\" data-v-11cc5f1c=\\"\\">Last.fm</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_radia\\" data-v-11cc5f1c=\\"\\">Radia</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_gameVersion\\" data-v-11cc5f1c=\\"\\">Game version</div>
    <div class=\\"ipl-space color-blue clickable m-b-8\\" data-test=\\"section-selector_obs-socket\\" data-v-11cc5f1c=\\"\\">OBS Socket</div>
  </div>
</div>
<!---->
<div class=\\"ipl-space color-dark clickable layout horizontal m-t-8\\" data-test=\\"open-sidebar-button\\" data-v-11cc5f1c=\\"\\">
  <font-awesome-icon-stub icon=\\"bars\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"large-icon m-r-8\\"></font-awesome-icon-stub> All Settings
</div>
<lastfm-settings-stub class=\\"m-t-8\\"></lastfm-settings-stub>"
`;

exports[`Settings matches snapshot when section obs-socket is selected 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"ipl-sidebar__wrapper sidebar-transition-enter-from sidebar-transition-leave-from sidebar-transition-leave-active\\" data-v-2b6fb510=\\"\\">
  <div class=\\"background\\" data-v-2b6fb510=\\"\\"></div>
  <div class=\\"content\\" data-v-2b6fb510=\\"\\">
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_lastfm\\" data-v-11cc5f1c=\\"\\">Last.fm</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_radia\\" data-v-11cc5f1c=\\"\\">Radia</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_gameVersion\\" data-v-11cc5f1c=\\"\\">Game version</div>
    <div class=\\"ipl-space color-blue clickable m-b-8\\" data-test=\\"section-selector_obs-socket\\" data-v-11cc5f1c=\\"\\">OBS Socket</div>
  </div>
</div>
<!---->
<div class=\\"ipl-space color-dark clickable layout horizontal m-t-8\\" data-test=\\"open-sidebar-button\\" data-v-11cc5f1c=\\"\\">
  <font-awesome-icon-stub icon=\\"bars\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"large-icon m-r-8\\"></font-awesome-icon-stub> All Settings
</div>
<obs-socket-settings-stub class=\\"m-t-8\\"></obs-socket-settings-stub>
<obs-data-picker-stub class=\\"m-t-8\\"></obs-data-picker-stub>"
`;

exports[`Settings matches snapshot when section radia is selected 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"ipl-sidebar__wrapper sidebar-transition-enter-from sidebar-transition-leave-from sidebar-transition-leave-active\\" data-v-2b6fb510=\\"\\">
  <div class=\\"background\\" data-v-2b6fb510=\\"\\"></div>
  <div class=\\"content\\" data-v-2b6fb510=\\"\\">
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_lastfm\\" data-v-11cc5f1c=\\"\\">Last.fm</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_radia\\" data-v-11cc5f1c=\\"\\">Radia</div>
    <div class=\\"ipl-space color-light clickable m-b-8\\" data-test=\\"section-selector_gameVersion\\" data-v-11cc5f1c=\\"\\">Game version</div>
    <div class=\\"ipl-space color-blue clickable m-b-8\\" data-test=\\"section-selector_obs-socket\\" data-v-11cc5f1c=\\"\\">OBS Socket</div>
  </div>
</div>
<!---->
<div class=\\"ipl-space color-dark clickable layout horizontal m-t-8\\" data-test=\\"open-sidebar-button\\" data-v-11cc5f1c=\\"\\">
  <font-awesome-icon-stub icon=\\"bars\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"large-icon m-r-8\\"></font-awesome-icon-stub> All Settings
</div>
<radia-settings-stub class=\\"m-t-8\\"></radia-settings-stub>"
`;
